arxui_errors.txt
   Compiling arxos v2.0.0 (C:\Users\215724\source\repos\arxos\crates\arxos)
warning: fields `containment` and `elements_by_structure` are never read
  --> crates\arx\src\ifc\hierarchy.rs:32:5
   |
28 | pub struct HierarchyBuilder {
   |            ---------------- fields in this struct
...
32 |     containment: HashMap<String, Vec<String>>,
   |     ^^^^^^^^^^^
33 |     rooms_by_structure: HashMap<String, Vec<String>>,
34 |     elements_by_structure: HashMap<String, Vec<String>>,
   |     ^^^^^^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(dead_code)]` on by default

warning: `arx` (lib) generated 1 warning
    Checking arxui v2.0.0 (C:\Users\215724\source\repos\arxos\crates\arxui)
warning: unused import: `PI`
 --> crates\arxui\src\render3d\camera.rs:6:24
  |
6 | use std::f64::consts::{PI, FRAC_PI_2};
  |                        ^^
  |
  = note: `#[warn(unused_imports)]` on by default

warning: unused imports: `KeyModifiers` and `MouseEvent`
 --> crates\arxui\src\render3d\point_cloud.rs:7:40
  |
7 | use crossterm::event::{Event, KeyCode, KeyModifiers, MouseEvent, MouseEventKind};
  |                                        ^^^^^^^^^^^^  ^^^^^^^^^^

warning: unused import: `SetForegroundColor`
 --> crates\arxui\src\render3d\point_cloud.rs:8:38
  |
8 | use crossterm::style::{Color, Print, SetForegroundColor};
  |                                      ^^^^^^^^^^^^^^^^^^

warning: unused import: `queue`
  --> crates\arxui\src\render3d\point_cloud.rs:10:34
   |
10 | use crossterm::{cursor, execute, queue};
   |                                  ^^^^^

warning: unused import: `std::collections::HashMap`
  --> crates\arxui\src\render3d\point_cloud.rs:11:5
   |
11 | use std::collections::HashMap;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0308]: mismatched types
  --> crates\arxui\src\render3d\camera.rs:90:18
   |
90 |         self.sub(&other)
   |              --- ^^^^^^ expected `Vec3`, found `&Vec3`
   |              |
   |              arguments to this method are incorrect
   |
help: the return type of this call is `&Vec3` due to the type of the argument passed
  --> crates\arxui\src\render3d\camera.rs:90:9
   |
90 |         self.sub(&other)
   |         ^^^^^^^^^------^
   |                  |
   |                  this argument influences the return type of `sub`
note: method defined here
  --> /rustc/1159e78c4747b02ef996e55082b704c09b970588\library\core\src\ops\arith.rs:205:8
help: consider removing the borrow
   |
90 -         self.sub(&other)
90 +         self.sub(other)
   |

error[E0308]: mismatched types
  --> crates\arxui\src\render3d\camera.rs:97:18
   |
97 |         self.add(&other)
   |              --- ^^^^^^ expected `Vec3`, found `&Vec3`
   |              |
   |              arguments to this method are incorrect
   |
help: the return type of this call is `&Vec3` due to the type of the argument passed
  --> crates\arxui\src\render3d\camera.rs:97:9
   |
97 |         self.add(&other)
   |         ^^^^^^^^^------^
   |                  |
   |                  this argument influences the return type of `add`
note: method defined here
  --> /rustc/1159e78c4747b02ef996e55082b704c09b970588\library\core\src\ops\arith.rs:93:8
help: consider removing the borrow
   |
97 -         self.add(&other)
97 +         self.add(other)
   |

warning: unused variable: `building_name`
  --> crates\arxui\src\commands\import.rs:12:5
   |
12 |     building_name: &str,
   |     ^^^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_building_name`
   |
   = note: `#[warn(unused_variables)]` on by default

warning: function cannot return without recursing
   --> crates\arxui\src\render3d\camera.rs:103:5
    |
103 |     fn mul(self, scalar: f32) -> Vec3 {
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ cannot return without recursing
104 |         self.mul(scalar)
    |         ---------------- recursive call site
    |
    = help: a `loop` may express intention better if this is on purpose
    = note: `#[warn(unconditional_recursion)]` on by default

error[E0502]: cannot borrow `*self` as mutable because it is also borrowed as immutable
   --> crates\arxui\src\render3d\point_cloud.rs:253:13
    |
252 |         if let Some(ref grid) = self.grid {
    |                     -------- immutable borrow occurs here
253 |             self.render_with_lod(grid, width, height)?;
    |             ^^^^^---------------^^^^^^^^^^^^^^^^^^^^^
    |             |    |
    |             |    immutable borrow later used by call
    |             mutable borrow occurs here

warning: unreachable pattern
   --> crates\arxui\src\render3d\point_cloud.rs:363:21
    |
345 |                     KeyCode::Char('q') | KeyCode::Esc => return false,
    |                     ------------------ matches all the relevant values
...
363 |                     KeyCode::Char('q') | KeyCode::Char('Q') => {
    |                     ^^^^^^^^^^^^^^^^^^ no value can reach this
    |
    = note: `#[warn(unreachable_patterns)]` on by default

Some errors have detailed explanations: E0308, E0502.
For more information about an error, try `rustc --explain E0308`.
warning: `arxui` (lib) generated 8 warnings
error: could not compile `arxui` (lib) due to 3 previous errors; 8 warnings emitted
